# libpyronia

./: .gitignore  generate-pyr-policy-template.py
apps/RPiAlexa/: alexa.prof  alexa.py
apps/aws-moisture-sensor/: df401a2b29-certificate.pem.cert.txt  df401a2b29-private.pem.key  moisture.prof  plant_watering.py
apps/tensorflow-img-classifier/: tensorflow.prof
apps/tweeting-plants/: twitterPhoto.prof  twitterPhoto.py
benchmarks/: hello-latency  latency_overhead.py
libapparmor/: .gitignore
libraries/libpyronia/: CMakeLists.txt  kernel_comm.c  kernel_comm.h  pyronia_lib.c  pyronia_lib.h  security_context.c  security_context.h  serialization.c  serialization.h
libraries/libpyronia/testsuite/: home.pyronia.kernel_upcall_test  home.pyronia.kernel_upcall_test-lib.prof  kernel_upcall_test.c  testutil.h
libraries/libsmv/: CMakeLists.txt  Makefile  kernel_comm.c  kernel_comm.h  memdom_lib.c  memdom_lib.h  smv_lib.c
libsmv/: kernel_comm.c  memdom_lib.c  memdom_lib.h  smv_lib.c  smv_lib.h
libsmv/testcases/: memdom_grant_revoke_main.c  smv_ops_tests.c  smvthread_ops_tests.c  tc_smvthread_create.c
parser/: immunix.h  parser.h  parser_lex.l  parser_misc.c
scripts/: install_pyr_deps  run_pyr_tests  setup_pyronia_testing
src/: CMakeLists.txt  cpython_exts.c  cpython_exts.h  data_obj.h  pyronia_lib.c  pyronia_lib.h  security_context.c  security_context.h  serialization.c  serialization.h  si_comm.c  si_comm.h  util.h
testsuite/: callgraph_perms_fail_test.c  critical_state_alloc_test.c  file_access_test.c  kernel_upcall_test.c  network_access_test.c  testutil.h
(+16 files in other folders)
